force-app/main/default/objects/Opportunity_Sector__c/Opportunity_Sector__c.object-meta.xml
<CustomObject>
    <label>Opportunity Sector</label>
    <nameField>
        <displayFormat>OS-{000000}</displayFormat>
        <label>Opportunity Sector</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Sectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>