force-app/main/default/objects/Opportunity_Sector__c/fields/Sector_Combo__c.field-meta.xml
<CustomField>
    <fullName>Sector_Combo__c</fullName>
    <formula>Coverage_Sector_Dependency__r.UniqueRecordKey__c</formula>
    <label>Sector Combo</label>
    <type>Text</type>
</CustomField>